fix z-index on menu

--- a/site/structures/menus/_index.scss
+++ b/site/structures/menus/_index.scss
@@ -22,6 +22,7 @@
    display: block;
    margin: 0;
    overflow: visible;
+   z-index: 5;
 }
 %menu__item {
    position: relative;
